# autopsy_band

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.md  agent_config.example.yaml  deploy.sh  pyproject.toml
app/: config.py  main.py  model_client.py
app/agents/: prompts.py  stages.py
app/band/: __init__.py  adapter.py  agent_config.py  client.py  result_store.py  run.py  stage_graph.py  submit.py
app/pipeline/: orchestrator.py  verifier_gate.py
app/report/: renderer.py
app/taxonomy/: loader.py  remediation.json  taxonomy.json
static/: style.css
templates/: _report.html  base.html  index.html
tests/: test_band_stage_graph.py  test_pipeline_smoke.py  test_taxonomy_loader.py  test_verifier_gate.py
