[project]
name = "autopsy-band"
version = "0.1.0"
description = "Forensic 6-agent council that diagnoses why an AI build failed"
readme = "agent.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.6",
    "openai>=1.54",
    "markdown>=3.7",
    "python-dotenv>=1.0",
    "thenvoi-sdk>=0.2.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]
band = [
    "band-sdk[anthropic]",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
